pages/catalogue/style.css
body {
    position: relative;
    display: grid;
    grid-template-columns: 4fr 1fr;
}

h1 {
    text-align: center;
}

aside {
    position: fixed;
    right: 10px;
    height: 92vh;
    width: 20%;
    overflow-y: scroll;
}

#catalogue {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.container {
    max-width: 1280px;
    margin: 0 auto;
}

.book-item {
    border: 1px solid #88888c;
    margin: 20px;
    padding: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.book-item img {
    height: 280px;
    width: 180px;
}

.book-item h2 {
    text-align: center;
    margin: 0.5rem 0;
}

.book-item h3 {
    text-align: center;
    margin: 0.4rem 0;
}

.btn  {
    margin: 10px 5px;
    cursor: pointer;
}

.modal {
    display: none;
    position: fixed;
    background-color: rgba(10,10,10,.86);
    align-items: center;
    overflow: auto;
    z-index: 1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.modal.active {
    display: block;
}

.modal-content {
    background-color: #fefefe;
    margin: 10% auto;
    padding: 10px;
    width: 60%;
}

.modal-content .description {
    margin-top: 30px;
}

.close-btn {
    float: right;
    color: #aaa;
    font-size: 30px;
    font-weight: bold;
}

.close-btn:hover,
.close-btn:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.cart-item {
    padding: 10px;
}

